# v3

./: .gitignore  AGENTS.md  README.md  biome.jsonc
bespoke-modules/: deno.json  metadata.json
bespoke-modules/scripts/: build-shared.ts  classmap-fetch.ts  classmap-info.ts  cron.ts  tmp.ts
classmap-updator/: curator.ts
classmaps/1.2.87/: classmap.json
cli/: Cargo.toml  README.md  install.ps1
cli/src/: lib.rs  main.rs
cli/src/application/: dispatcher.rs  mod.rs  runtime.rs  service.rs
cli/src/core/: app.rs  cli.rs  config.rs  mod.rs
cli/src/domain/: apply.rs  config.rs  daemon.rs  dev.rs  fix.rs  init.rs  mod.rs  pkg.rs  protocol.rs  run.rs  sync.rs  update.rs
cli/src/domain/spicetify/: apply.rs  config.rs  daemon.rs  dev.rs  fix.rs  init.rs  mod.rs  pkg.rs  protocol.rs  sync.rs
cli/src/domain/spotify/: mod.rs  run.rs  update.rs
cli/src/infrastructure/: daemon_runtime.rs  mod.rs  ports.rs  system.rs
cli/src/module/: metadata.rs  mod.rs  vault.rs
cli/src/paths/: linux.rs  macos.rs  mod.rs  windows.rs
cli/src/process/: spotify.rs
cli/src/ui/: tui.rs
cli/src/utils/: archive.rs  linking.rs  logging.rs  mod.rs  patch.rs  utf16.rs
creator/: Cargo.toml  rustfmt.toml
devtools/: main.html  manifest.json  package-lock.json  package.json  panel.html  rspack.config.js  tsconfig.json  vite.config.js
hooks/: PlatformAutoGen.d.ts  index.ts  mixins.ts  module.ts  package.json  protocol.ts  static.ts  transform.ts  tsconfig.json  util.ts
modules/: .gitignore  README.md  biome.jsonc  deno.json  deno.jsonc  vault.json
pkgs/: vault.json
(+416 files in other folders)
