[package]
name = "spicetify"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
directories = "6.0.0"
walkdir = "2.5.0"
zip = "8.5.0"
tar = "0.4.45"
flate2 = "1.1.9"
encoding_rs = "0.8.35"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
notify = "8.2.0"
url = "2.5.8"
regex = "1.12.3"
dunce = "1.0.5"
tokio = { version = "1.50", features = ["rt-multi-thread", "macros", "signal"] }
axum = { version = "0.8.8", features = ["ws"] }
futures-util = "0.3.32"
ratatui = "0.30.0"
crossterm = "0.29.0"

[target.'cfg(windows)'.dependencies]
junction = "1"

